--- a/quickstart/plan.mdx
+++ b/quickstart/plan.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Hoagie Plan'
-description: 'Learn how to set up your local development environment for Hoagie Plan'
+title: "Hoagie Plan"
+description: "Learn how to set up your local development environment for Hoagie Plan"
 ---
 
 # Setup
@@ -23,8 +23,6 @@ The setup process will slightly differ depending on your operating system.
     - [PostgreSQL](https://www.postgresql.org/), our database.
     - [Bun](https://bun.sh/), our TypeScript package manager.
     - [uv](https://docs.astral.sh/uv/), our Python package manager.
-
-    For more information on our tech stack, please visit our [tech stack page](/tech-stack).
 
     ----
 
@@ -202,8 +200,6 @@ The setup process will slightly differ depending on your operating system.
     - [Bun](https://bun.sh/), our TypeScript package manager.
     - [uv](https://docs.astral.sh/uv/), our Python package manager.
 
-    For more information on our tech stack, please visit our [tech stack page](/tech-stack).
-
     ----
 
     ## Step 5. Install required packages
@@ -350,25 +346,19 @@ Here are some common issues you might encounter when setting up your development
 
 <AccordionGroup>
   <Accordion title="Scary-looking `psycopg2` error">
-    Ensure that you have `PostgreSQL` installed on your system using Homebrew. You can install it by running:
-    ```bash
-    brew install postgresql
-    ```
-    After installation, verify that the PostgreSQL path is added to your `PATH` environment variable to avoid issues. You can check this by running:
-    ```bash
-    echo $PATH
-    ```
-    If the path is missing, you can add PostgreSQL to your path by appending it directly to your shell configuration file (like `.zshrc`, `.bash_profile`, or `.bashrc`). For example:
-    ```bash zsh
-    echo 'export PATH="/usr/local/opt/postgresql/bin:$PATH"' >> ~/.zshrc
-    ```
-    Remember to source the file afterward to apply the changes immediately:
-    ```bash zsh
-    source ~/.zshrc
-    ```
+    Ensure that you have `PostgreSQL` installed on your system using Homebrew.
+    You can install it by running: ```bash brew install postgresql ``` After
+    installation, verify that the PostgreSQL path is added to your `PATH`
+    environment variable to avoid issues. You can check this by running: ```bash
+    echo $PATH ``` If the path is missing, you can add PostgreSQL to your path
+    by appending it directly to your shell configuration file (like `.zshrc`,
+    `.bash_profile`, or `.bashrc`). For example: ```bash zsh echo 'export
+    PATH="/usr/local/opt/postgresql/bin:$PATH"' >> ~/.zshrc ``` Remember to
+    source the file afterward to apply the changes immediately: ```bash zsh
+    source ~/.zshrc ```
   </Accordion>
   <Accordion title="Undefined error when I navigate to pages other than homepage">
-    Make sure the environment variables, `.env.local` and `.env`, are set at the root level of the `frontend/` and `backend/` directories, respectively.
+    Make sure the environment variables, `.env.local` and `.env`, are set at the
+    root level of the `frontend/` and `backend/` directories, respectively.
   </Accordion>
 </AccordionGroup>
-
