--- a/quickstart/plan.mdx
+++ b/quickstart/plan.mdx
@@ -9,11 +9,10 @@ The setup process will slightly differ depending on your operating system.
 
 <AccordionGroup>
   <Accordion title="MacOS">
-    The easiest way to install the required dependencies is to use [Homebrew](https://brew.sh/).
 
     ## Step 1. Install Homebrew
 
-    Run the following command in your terminal:
+    The easiest way to install the required dependencies is to use [Homebrew](https://brew.sh/). Run the following command in your terminal:
 
     ```bash zsh
     /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
@@ -182,6 +181,8 @@ The setup process will slightly differ depending on your operating system.
     Open the **Start Menu**, search for **Ubuntu** (or the name of the Linux distribution you installed), and click on the app to open it.
 
     When you launch Ubuntu for the first time, it will take a few minutes to set up, and you may be prompted to create a new username and password for your Linux environment.
+
+    ----
 
     ## Step 4. Install Homebrew
 
