Clarify dependencies step for mail

--- a/quickstart/mail.mdx
+++ b/quickstart/mail.mdx
@@ -91,7 +91,12 @@ If you have a Windows operating system, complete these steps before continuing.
 
     You will need to download the required dependencies before you can run the apps.
 
-    From each respository, run `yarn`:
+    From the api repository, run:
+    ```bash bash
+    go get
+    ```
+
+    From the mail and stuff repositories, run:
     ```bash bash
     yarn
     ```
