--- a/quickstart/mail.mdx
+++ b/quickstart/mail.mdx
@@ -51,6 +51,23 @@ If you have a Windows operating system, complete these steps before continuing.
     brew install yarn
     ```
 
+    [MongoDB](https://www.mongodb.com/), for our databases:
+    ```bash bash
+    brew tap mongodb/brew
+    brew update
+    brew install mongodb-community@8.2
+    ```
+    
+    Then run MongoDB as a service. If you're on MacOS:
+    ```bash zsh
+    brew services start mongodb-community@8.2
+    ```
+    If you're on Windows running WSL:
+    ```bash bash
+    sudo systemctl start mongod
+    ```
+
+
     We use [VSCode](https://code.visualstudio.com/) for development. Download it and get the following extensions:
     - [Eslint](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint)
     - [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode)
