Remove comment that prevented running of command

--- a/quickstart/plan.mdx
+++ b/quickstart/plan.mdx
@@ -29,7 +29,7 @@ The setup process will slightly differ depending on your operating system.
 
     PostgreSQL:
     ```bash zsh
-    brew install postgresql@17 # Latest version
+    brew install postgresql@17
     ```
 
     Bun:
@@ -207,7 +207,7 @@ The setup process will slightly differ depending on your operating system.
 
     PostgreSQL:
     ```bash bash
-    brew install postgresql@17 # Latest version
+    brew install postgresql@17
     ```
 
     Bun:
